# rti-project

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: subteam_weekly_update.md
.github/workflows/: test.yml
docs/: CONTRIBUTING.md  setup.md
models/cv_camera_model/: model.config  model.sdf
models/fragile_box/: model.config  model.sdf
models/fragile_box/materials/scripts/: fragile_box.material
models/hazard_box/: model.config  model.sdf
models/hazard_box/materials/scripts/: hazard_box.material
models/standard_box/: model.config  model.sdf
models/standard_box/materials/scripts/: standard_box.material
ros2_ws/models/test_scene/: model.config  model.sdf
ros2_ws/src/cv_classification_node/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cv_classification_node/cv_classification_node/: classify.py
ros2_ws/src/multibot_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/multibot_controller/launch/: multi_bot_control.launch.py
ros2_ws/src/multibot_controller/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  slam_launch.py
ros2_ws/src/multibot_controller/src/: goal_sender.py  pose_server.py
ros2_ws/src/multibot_controller/srv/: GetRobotPose.srv
ros2_ws/src/multibot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/multibot_interfaces/msg/: RobotGoal.msg
ros2_ws/src/multibot_interfaces/srv/: Task.srv
ros2_ws/src/multibot_scheduler/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/multibot_scheduler/multibot_scheduler/: scheduler.py
src/moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_configuration/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro  ros2_controllers.yaml
src/moveit_configuration/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/description/: robot.urdf.xacro  robot_core.xacro
src/robotic_arm/launch/: display.launch.py
src/robotic_arm/meshes/: base_link.STL  gripper_1.STL  gripper_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
src/robotic_arm/urdf/: robotic_arm.urdf  robotic_arm_urdf.csv
warehouse_sim/: CMakeLists.txt  Read me to launch  package.xml
warehouse_sim/launch/: warehouse_world.launch.xml
warehouse_sim/worlds/: warehouse_world.world
