[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rti-project"
version = "0.1.0"
description = "ROS 2 housekeeping and CI tools"
authors = [
    { name="RTI Team" }
]
dependencies = [
    "pytest",
    "pre-commit",
    "rosdep"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
