<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multibot_controller</name>
  <version>0.0.0</version>
  <description>This package controls multiple AGVs and also serves as an interface for the scheduler to interact with the multi-robot system.</description>
  <maintainer email="megaprime0207@gmail.com">Aritra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_common</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
